--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,8 +281,8 @@ figure {
 .btn.btn-link {
   font-size: 23px;
   line-height: 73px;
-  height: 73px;
-  width: 230px;
+  height: 73px;  
+  width: 230px;  
   padding: 0 15px;
   background: url(../img/others/btn-bg.webp);
   background-repeat: no-repeat;
@@ -299,11 +299,25 @@ figure {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .btn.btn-link {
     font-size: 20px;
+    
   }
 }
+
+@media only screen and (min-width: 760px) {
+  .btn.btn-link.entrar {
+  left: 100px;
+ }
+}
+
+.btn.btn-link.entrar {
+  top:-70px;
+ }
+
+
 @media only screen and (max-width: 767px) {
   .btn.btn-link {
     font-size: 18px;
+    
   }
 }
 
@@ -2165,7 +2179,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .single_upcoming_thumb img {
-    width: 80px;
+    width: 100%;
   }
 }
 
